Release 0.5-3:
  * Add "-fallow-argument-mismatch" to "GFORTRAN_FLAGS" for GNU 10.

Release 0.5-2:
  * Import "utils" to NAMESPACE.

Release 0.5-1:
  * Fixed build issue with x64 windows.
  * Update to latest pbdMPI/pbdSLAP flags/linking.
  * Large internal re-organization.
  * Added base.det().
  * Fixed some minor Fortran issues.
  * Deprecated dallreduce() R bindings.
  * Better string portability with pdlaprnt().
  * Add FC_LEN_T and USE_FC_LEN_T for C/Fortran char* length via size_t.
  * Add examples and return values.

Release 0.5-0:
  * Generalize pdgemm() wrapper.
  * Update to RNACI v0.5.0.
  * Added base.pdgelqf().
  * Added base.rpdorglq().
  * Exported native routines.
  * Fixed base.matexp() bug.
  * Fixed some compiler warnings.
  * Cleaned up some internal issues.
  * Initial support for BLACS contexts with multiple MPI communicators.
  * Fixed Windows build issue (Jeroen Ooms).
  * Fix OMP flags issue.

Release 0.4-6:
  * Fix indexing problem in pdsweep()

Release 0.4-5:
  * Rewrote sweeper.
  * Remove -w and fix compiler warnings.
  * Update internal RNACI.
  * Fixed several serious memory issues when computing eigenvalues.
  * Switch pdsyev() to pdsyevr().

Release 0.4-4:
  * Add custom distribution function to replace pdgemr2d() for most purposes.
  * Fixed pdgemr2d() bug.
  * Fix several issues with condition numbers.
  * Some small internal cleanup.

Release 0.4-3:
  * Add pigemr2d() wrapper.
  * Added g2lcoord()
  * Fixed indxg2p bug indexing bug.
  * Swap floor() to as.integer() in indexing functions.

Release 0.4-2:
  * Fixed major problem with internal BLACS grid management with MKL.
  * Switched to a header-only RNACI.
  * Fixed build issues on Solaris (wcc).
  * Added flag to disable src/export_blacs (needed for Intel mpi).

Release 0.4-1:
  * Fixed mkgblmat bug when using non-full contexts.
  * Fixed build issue with Intel compilers.
  * Updated README.md.

Release 0.4-0:
  * Changed base api.
  * Numerous improvements to documentation.